force-app/main/default/objects/OrderItem/fields/attestationJSON__c.field-meta.xml
<CustomField>
    <fullName>attestationJSON__c</fullName>
    <label>Attestation JSON</label>
    <length>13000</length>
    <type>LongTextArea</type>
</CustomField>