force-app/main/default/objects/OrderItem/fields/customerID__c.field-meta.xml
<CustomField>
    <fullName>customerID__c</fullName>
    <label>Customer ID</label>
    <length>80</length>
    <type>Text</type>
</CustomField>