force-app/main/default/objects/OrderItem/fields/customerName__c.field-meta.xml
<CustomField>
    <fullName>customerName__c</fullName>
    <label>CustomerName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>