force-app/main/default/objects/OrderItem/fields/fulfillmentPartner__c.field-meta.xml
<CustomField>
    <fullName>fulfillmentPartner__c</fullName>
    <label>Fulfillment Partner</label>
    <length>80</length>
    <type>Text</type>
</CustomField>