force-app/main/default/objects/OrderItem/fields/HRAReq__c.field-meta.xml
<CustomField>
    <fullName>HRAReq__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HRA Flag</label>
    <type>Checkbox</type>
</CustomField>