force-app/main/default/objects/OrderItem/fields/Is_Service__c.field-meta.xml
<CustomField>
    <fullName>Is_Service__c</fullName>
    <defaultValue>false</defaultValue>
    <description>New boolean custom attribute Is_Service is created at the Order Product level. Kindly pass the value as true for Mobile phlebotomy and false for the normal tests.</description>
    <label>Is_Service</label>
    <type>Checkbox</type>
</CustomField>