force-app/main/default/objects/OrderItem/fields/otcCleared__c.field-meta.xml
<CustomField>
    <fullName>otcCleared__c</fullName>
    <defaultValue>false</defaultValue>
    <description>otcCleared= true(can be gifted)/false(not giftable)</description>
    <label>OTC Cleared</label>
    <type>Checkbox</type>
</CustomField>