force-app/main/default/objects/OrderItem/fields/performingSite__c.field-meta.xml
<CustomField>
    <fullName>performingSite__c</fullName>
    <label>Performing Site</label>
    <length>80</length>
    <type>Text</type>
</CustomField>