force-app/main/default/objects/OrderItem/fields/prsId__c.field-meta.xml
<CustomField>
    <fullName>prsId__c</fullName>
    <formula>Order.prsId__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PRS Id</label>
    <type>Text</type>
</CustomField>