force-app/main/default/objects/OrderItem/fields/resultingRequired__c.field-meta.xml
<CustomField>
    <fullName>resultingRequired__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Resulting Required</label>
    <type>Checkbox</type>
</CustomField>